# dotfiles

./: .gitignore  .gitmodules  README.md  applications.conf.yaml  bashrc  flake.nix  install  install.conf.yaml  packages.conf.yaml
bash/: bashrc
dots/: .global.gitignore  .irbrc  arch-update.conf  boxxy.yaml  foot.ini  mimeapps.list  starship.toml
dots/ags/: .env.example  .gitignore  bun.lockb  config.js  main.ts  options.ts  package-lock.json  package.json  tsconfig.json
dots/agsv2/: app.ts
dots/applications/: ags-settings.desktop  com.stremio.Stremio.desktop  discord-ptb.desktop  discord.desktop  firefox-personal.desktop  firefox-work.desktop  firefox.desktop  gdlauncher.desktop  gtk3-icon-browser.desktop  insomnia.desktop  lf.desktop  mattermost-desktop.desktop  obsidian.desktop  zen-alpha.desktop
dots/astal/: .gitignore  app.ts  eslint.config.js  options.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
dots/bash/: bashrc  profile
dots/builds/: install.sh
dots/ctpv/: config
dots/eww/: eww.scss  eww.yuck
dots/fish/: config.fish  (+1 more)
dots/hypr/scripts/: bluelightfilter.py  center_single_windows  default_profile_switcher.py  firefox_default_profile_switcher.py  float_bitwarden  handle_single_windows  import_env  launchfoot  monitor_events  pyproject.toml  tv_move  wlsunset
eww/: eww.scss  eww.yuck
fish/: config.fish  fish_variables
home/: home.nix
home-manager/: home.nix
hypr/: hyprland.conf  hyprland.conf.save
kitty/: kitty.conf
nixos/: configuration.nix
system/: configuration.nix  hardware-configuration.nix
(+615 files in other folders)
